fix image overflow

--- a/src/app/features/about/components/about-section/about-section.scss
+++ b/src/app/features/about/components/about-section/about-section.scss
@@ -66,14 +66,10 @@
     height: 100%;
     max-height: 70rem;
     margin: auto 0;
+    overflow: hidden;
 
     @media screen and (max-width: 895px) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
       max-width: 50rem;
-      max-height: 50rem;
     }
 
     img {
@@ -81,7 +77,6 @@
       height: 100%;
       object-fit: cover;
       object-position: top center;
-      display: block;
     }
   }
 }
